added get all APIs for student
